--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,12 @@
 <!--    <color name="std_button_background_pressed">#247827</color>-->
 <!--    <color name="std_button_inverted_background_not_pressed">#FFFFFF</color>-->
 <!--    <color name="std_button_inverted_background_pressed">#247827</color>-->
+
+    <!--    Colori logo    >-->
+    <color name="logo_color1">#FFFFFF</color>
+    <color name="logo_color2">#000000</color>
+    <color name="logo_color_ball">#FFFFFF</color>
+
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#858585</color>
@@ -26,6 +32,7 @@
     <!--    <color name="std_button_background_pressed">#247827</color>-->
     <color name="std_button_background_not_pressed">#255B68</color>
     <color name="std_button_background_pressed">#387381</color>
+    <color name="std_button_background_not_activated">#787878</color>
     <color name="std_button_inverted_background_not_pressed">#FFFFFF</color>
     <color name="std_button_inverted_background_pressed">#EFEFEF</color>
 </resources>
