--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="white2">#F0F0F0</color>
     <color name="gray">#858585</color>
     <color name="trasparent">#00FFFFFF</color>
+    <color name="red">#BD261B</color>
     <color name="red_trasparent">#E6BD261B</color>
     <color name="green_trasparent">#E64CAF50</color>
 
@@ -23,8 +24,8 @@
     <color name="std_button_inverted_background_not_pressed">#FFFFFF</color>
     <color name="std_button_inverted_background_pressed">#EFEFEF</color>
 
-    <color name="logout_button_not_pressed">#E6BD261B</color>
-    <color name="logout_button_pressed">#E6CC4036</color>
+    <color name="logout_button_not_pressed">#BD261B</color>
+    <color name="logout_button_pressed">#CC4036</color>
 
     <color name="navbar_icon">#FFFFFF</color>
     <color name="navbar_icon_selected">#197542</color>
